@@ -1,3 +1,5 @@
+using System.Windows.Forms;
+
 namespace Chummer
 {
     public sealed partial class frmChummerMain
@@ -27,6 +29,7 @@ namespace Chummer
         /// </summary>
         private void InitializeComponent()
         {
+            this.components = new System.ComponentModel.Container();
             System.ComponentModel.ComponentResourceManager resources = new System.ComponentModel.ComponentResourceManager(typeof(frmChummerMain));
             this.menuStrip = new System.Windows.Forms.MenuStrip();
             this.fileMenu = new System.Windows.Forms.ToolStripMenuItem();
@@ -92,6 +95,12 @@ namespace Chummer
             this.toolStripSeparator2 = new System.Windows.Forms.ToolStripSeparator();
             this.helpToolStripButton = new System.Windows.Forms.ToolStripButton();
             this.tabForms = new System.Windows.Forms.TabControl();
+            this.mnuProcessFile = new System.Windows.Forms.ContextMenuStrip(this.components);
+            this.tsSave = new ToolStripMenuItem();
+            this.tsSaveAs = new ToolStripMenuItem();
+            this.tsClose = new ToolStripMenuItem();
+            this.tsPrint = new ToolStripMenuItem();
+            this.tsExport = new ToolStripMenuItem();
             this.menuStrip.SuspendLayout();
             this.toolStrip.SuspendLayout();
             this.SuspendLayout();
@@ -728,6 +737,80 @@ namespace Chummer
             this.tabForms.TabIndex = 3;
             this.tabForms.Visible = false;
             this.tabForms.SelectedIndexChanged += new System.EventHandler(this.tabForms_SelectedIndexChanged);
+            this.tabForms.MouseClick += new System.Windows.Forms.MouseEventHandler(this.tabForms_MouseClick);
+            // 
+            // mnuProcessFile
+            // 
+            this.mnuProcessFile.Items.AddRange(new System.Windows.Forms.ToolStripItem[] {
+            this.tsSave,
+            this.tsSaveAs,
+            this.toolStripSeparator1,
+            this.tsClose,
+            this.toolStripSeparator2,
+            this.tsPrint});
+            this.mnuProcessFile.Name = "mnuProcessFile";
+            this.mnuProcessFile.Size = new System.Drawing.Size(37, 20);
+            this.mnuProcessFile.Tag = "Menu_Main_File";
+            this.mnuProcessFile.Text = "&File";
+            // 
+            // tsSave
+            // 
+            this.tsSave.Image = global::Chummer.Properties.Resources.disk;
+            this.tsSave.ImageTransparentColor = System.Drawing.Color.Black;
+            this.tsSave.MergeAction = System.Windows.Forms.MergeAction.Insert;
+            this.tsSave.MergeIndex = 3;
+            this.tsSave.Name = "tsSave";
+            this.tsSave.Size = new System.Drawing.Size(148, 22);
+            this.tsSave.Tag = "Menu_FileSave";
+            this.tsSave.Text = "&Save";
+            this.tsSave.Click += new System.EventHandler(this.tsSave_Click);
+            // 
+            // tsSaveAs
+            // 
+            this.tsSaveAs.Image = global::Chummer.Properties.Resources.disk;
+            this.tsSaveAs.MergeAction = System.Windows.Forms.MergeAction.Insert;
+            this.tsSaveAs.MergeIndex = 4;
+            this.tsSaveAs.Name = "tsSaveAs";
+            this.tsSaveAs.Size = new System.Drawing.Size(148, 22);
+            this.tsSaveAs.Tag = "Menu_FileSaveAs";
+            this.tsSaveAs.Text = "Save &As";
+            this.tsSaveAs.Click += new System.EventHandler(this.tsSaveAs_Click);
+            // 
+            // toolStripSeparator1
+            // 
+            this.toolStripSeparator1.MergeAction = System.Windows.Forms.MergeAction.Insert;
+            this.toolStripSeparator1.MergeIndex = 5;
+            this.toolStripSeparator1.Name = "toolStripSeparator1";
+            this.toolStripSeparator1.Size = new System.Drawing.Size(145, 6);
+            // 
+            // tsClose
+            // 
+            this.tsClose.Image = global::Chummer.Properties.Resources.cancel;
+            this.tsClose.MergeAction = System.Windows.Forms.MergeAction.Insert;
+            this.tsClose.MergeIndex = 6;
+            this.tsClose.Name = "tsClose";
+            this.tsClose.Size = new System.Drawing.Size(148, 22);
+            this.tsClose.Tag = "Menu_FileClose";
+            this.tsClose.Text = "&Close";
+            this.tsClose.Click += new System.EventHandler(this.tsClose_Click);
+            // 
+            // toolStripSeparator2
+            // 
+            this.toolStripSeparator2.MergeAction = System.Windows.Forms.MergeAction.Insert;
+            this.toolStripSeparator2.MergeIndex = 7;
+            this.toolStripSeparator2.Name = "toolStripSeparator2";
+            this.toolStripSeparator2.Size = new System.Drawing.Size(145, 6);
+            // 
+            // tsPrint
+            // 
+            this.tsPrint.Image = global::Chummer.Properties.Resources.printer;
+            this.tsPrint.MergeAction = System.Windows.Forms.MergeAction.Insert;
+            this.tsPrint.MergeIndex = 8;
+            this.tsPrint.Name = "tsPrint";
+            this.tsPrint.Size = new System.Drawing.Size(148, 22);
+            this.tsPrint.Tag = "Menu_FilePrint";
+            this.tsPrint.Text = "&Print";
+            this.tsPrint.Click += new System.EventHandler(this.tsPrint_Click);
             // 
             // frmChummerMain
             // 
@@ -825,6 +908,12 @@ namespace Chummer
         private System.Windows.Forms.ToolStripMenuItem mnuToolsTranslator;
         private System.Windows.Forms.ToolStripMenuItem mnuChummerDiscord;
         private System.Windows.Forms.ToolStripMenuItem mnuHeroLabImporter;
+        private System.Windows.Forms.ContextMenuStrip mnuProcessFile;
+        private ToolStripItem tsSave;
+        private ToolStripItem tsSaveAs;
+        private ToolStripItem tsClose;
+        private ToolStripItem tsPrint;
+        private ToolStripItem tsExport;
     }
 }
 
